syntax = "proto3";
package summa.proto;

enum IndexEngine {
  File = 0;
  Memory = 1;
}

message Index {
  string index_name = 1;
  repeated string index_aliases = 2;
  string index_engine = 3;
}

message IndexDocumentOperation {
  bytes document = 1;
  bool reindex = 2;
}

message IndexOperation {
 oneof operation {
   IndexDocumentOperation index_document = 2;
 }
}