syntax = "proto3";
package summa.proto;


// API
service SearchApi {
  rpc search (SearchRequest) returns (SearchResponse) {}
}

// Requests

message SearchRequest {
  string index_alias = 1;
  Query query = 2;
  repeated Collector collectors = 3;
}

message SearchResponse {
  string index_name = 1;
  repeated CollectorResult collector_results = 2;
  double elapsed_secs = 3;
}

// Query DSL

message Query {
  oneof query {
    BooleanQuery boolean = 1;
    MatchQuery match = 2;
    RegexQuery regex = 3;
    TermQuery term = 4;
    PhraseQuery phrase = 5;
    RangeQuery range = 6;
    AllQuery all = 7;
    MoreLikeThisQuery more_like_this = 8;
    BoostQuery boost = 9;
  }
}

message AllQuery {}

message BoostQuery {
  Query query = 1;
  string score = 2;
}

message MoreLikeThisQuery {
  string document = 1;
  optional uint64 min_doc_frequency = 2;
  optional uint64 max_doc_frequency = 3;
  optional uint64 min_term_frequency = 4;
  optional uint64 max_query_terms = 5;
  optional uint64 min_word_length = 6;
  optional uint64 max_word_length = 7;
  optional string boost = 8;
  repeated string stop_words = 9;
}

message PhraseQuery {
  string field = 1;
  string value = 2;
  uint32 slop = 3;
}

message RangeQuery {
  string field = 1;
  Range value = 2;
}

message MatchQuery {
  string value = 1;
}

message BooleanSubquery {
  Occur occur = 1;
  Query query = 2;
}

message BooleanQuery {
  repeated BooleanSubquery subqueries = 1;
}

message RegexQuery {
  string field = 1;
  string value = 2;
}

message TermQuery {
  string field = 1;
  string value = 2;
}

// Extra structures

message Collector {
  oneof collector {
    TopDocsCollector top_docs = 1;
    ReservoirSamplingCollector reservoir_sampling = 2;
    CountCollector count = 3;
  }
}

message CollectorResult {
  oneof collector_result {
    TopDocsCollectorResult top_docs = 1;
    ReservoirSamplingCollectorResult reservoir_sampling = 2;
    CountCollectorResult count = 3;
  }
}

message CountCollector {}
message CountCollectorResult { uint32 count = 1; }

enum Occur {
  should = 0;
  must = 1;
  must_not = 2;
}

message ScoredDocument {
  string document = 1;
  Score score = 2;
  uint32 position = 3;
}

message Score {
  oneof score {
    double f64_score = 1;
    uint64 u64_score = 2;
  }
}

message Scorer {
  oneof scorer {
    string eval_expr = 1;
    string order_by = 2;
  }
}

message TopDocsCollector {
  uint32 limit = 1;
  uint32 offset = 2;
  optional Scorer scorer = 3;
}

message TopDocsCollectorResult {
  repeated ScoredDocument scored_documents = 1;
  bool has_next = 2;
}

message Range {
  string left = 1;
  string right = 2;
  bool including_left = 3;
  bool including_right = 4;
}

message ReservoirSamplingCollector {
  uint32 limit = 1;
}

message ReservoirSamplingCollectorResult {
  repeated string documents = 1;
}
